# PaperPlagiarismParade

./: README.md
community-structure-in-social-and-biological-networks/: README.md  main.py  pyproject.toml
small-world/: main.py  pyproject.toml
